fix topic authors being visible through menus

--- a/assets/styles/frontend/_forum.scss
+++ b/assets/styles/frontend/_forum.scss
@@ -46,7 +46,7 @@
 
 .topic-author {
     position: relative;
-    z-index: 999;
+    z-index: 1;
 }
 
 .topic-list-image {
